--- a/src/map.css
+++ b/src/map.css
@@ -1,4 +1,4 @@
-#mapid { 
+#mapid {
     height: 100vh;
     width: 100%;
     z-index: 1;
@@ -12,8 +12,8 @@
     font-size: 10px;
     line-height: 10px;
     font-size: 1rem;
-  }
-  
+}
+
 .leaflet-popup-content-wrapper .leaflet-popup-content b {
     font-weight: bold;
     color: #ffe103;
@@ -21,13 +21,19 @@
 
 .leaflet-popup-content-wrapper a {
     color: #2980b9;
-  }
-  
+}
+
 .leaflet-popup-tip-container {
     width: 40px;
     height: 20px;
 }
-  
+
 .leaflet-popup-tip {
     background: #454545;
+}
+
+@media only screen and (max-width: 1024px) {
+    #mapid {
+        height: calc(100vh - 70px);
+    }
 }
