--- a/src/aside.css
+++ b/src/aside.css
@@ -49,6 +49,7 @@ aside .random-places .random-place {
     justify-content: space-between;
     box-shadow: 2px 2px 5px #e6e6e6;
     color: #000;
+    pointer-events: all;
 }
 
 aside .random-places .random-place:hover {
@@ -60,6 +61,10 @@ aside .random-places .random-place span,
 aside .random-places .random-place img {
     pointer-events: none;
 }
+
+aside .random-places .simplebar-content {
+    pointer-events: none;
+} 
 
 @media only screen and (max-width: 440px) {
     aside header h1 {
