--- a/src/loader.css
+++ b/src/loader.css
@@ -4,8 +4,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #e8e8e8;
-    z-index: 5;
+    background-color: #fff;
+    z-index: 4;
     display: flex;
     align-items: center;
     justify-content: center;
