--- a/src/aside.css
+++ b/src/aside.css
@@ -15,7 +15,7 @@ aside header {
 aside header img {
     display: block;
     margin: 0 auto;
-    width: 75px;
+    width: 200px;
     height: 85px;
 }
 
@@ -67,9 +67,6 @@ aside .random-places .simplebar-content {
 } 
 
 @media only screen and (max-width: 440px) {
-    aside header h1 {
-        color: transparent;
-    }
     aside header h1 span {
         color: initial;
     }
@@ -85,33 +82,29 @@ aside .random-places .simplebar-content {
     aside header {
         height: 50px;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         justify-content: flex-start;
-        
+        padding-top: 0;
+        padding: 10px;
+        border-bottom: none;
     }
 
     aside header img {
-        width: 40px;
+        width: 100px;
         height: 50px;
         margin: 0;
     }
 
     aside header h1 {
-        margin-left: 20px;
         text-align: initial;
         white-space: nowrap; 
         overflow: hidden;
         text-overflow: ellipsis;
+        margin: 10px 0 5px 20px;
     }
 
     aside .random-places, aside h2 {
         display: none;
-    }
-
-    aside header {
-        padding: 10px;
-        border-bottom: none;
-        display: flex;
     }
 }
 
